# mini-blockchain

./: README.md  challenge.cabal  flake.nix  haskell-template.cabal  justfile
.github/workflows/: update-flake-lock.yaml
app/: Main.hs
docs/: README.md
examples/: BFT.hs  PingPong.hs
src/HDT/: Agent.hs  Blockchain.hs  Experimental.hs  Impure.hs  Interpret.hs  Skeleton.hs  Tasks.hs
