cabal-version:      3.6
name:               anastasia-labs-challenge
version:            0.1.0.0
maintainer:         professional@hariamoor.me
author:             Hari Amoor
category:           Simple

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:
  Hari Amoor's implementation of Anastasia Labs technical challenge

-- A longer description of the package.
description:
  Mock implementation of Ouroboros BFT protocol by IOG using free monads

extra-source-files: README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -fprint-potential-instances

  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    DataKinds
    DerivingStrategies
    ExplicitForAll
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    LambdaCase
    MultiParamTypeClasses
    OverloadedLists
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    ViewPatterns

  build-depends:      base
  default-language:   GHC2021

library
  import:          shared
  hs-source-dirs:  src
  build-depends:
    , parallel-io
    , polysemy
    , polysemy-plugin
    , stm
    , utility-ht

  exposed-modules: HDT.Tasks
  other-modules:
    HDT.Agent
    HDT.Blockchain
    HDT.Interpret
    HDT.Skeleton

  ghc-options: -fplugin=Polysemy.Plugin

executable challenge
  import:         shared
  build-depends:  with-utf8
  hs-source-dirs: app
  main-is:        Main.hs
